# choreonoid_ros_tutorial

./: CMakeLists.txt  README.md  package.xml
launch/: go2_inference_athletics.launch  go2_inference_shorttrack.launch
project/: ros_go2_inference_athletics.cnoid  ros_go2_inference_shorttrack.cnoid  ros_tank_tutorial.cnoid
src/: CMakeLists.txt  InferenceController.cpp  RttTankController.cpp
